--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <form id="form1">
-        <input type="text" placeholder="name" name="firstName" value="">
-        <input type="text" placeholder="preference" name="preference" value="">
-        <input type="submit" value="submit" name="sub">
+        <input type="text" placeholder="name" id="firstName" name="firstName" value="">
+        <input type="text" placeholder="preference" id="preference" name="preference" value="">
+        <input type="submit" value="submit" id="sub" name="sub">
     </form>
     <script>
-        // const a = document.getElementById("firstName");
-        // const b = document.getElementById("preference");
-        // const c = document.getElementById("sub");
-        // const d = document.getElementById("form1");
+
+        form3.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const a = document.getElementById("firstName").value;
+            const b = document.getElementById("preference").value;
+            const c = document.getElementById("sub");
+            const d = document.getElementById("form1");
+            localStorage.setItem('name', a);
+            localStorage.setItem('pref', b);
     </script>
 </body>
 </html>
