--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <input type="submit" value="submit" id="sub" name="sub">
     </form>
     <script>
-
-        form3.addEventListener('submit', (e) => {
+        const form1 = document.getElementById("form1);
+        form1.addEventListener('submit', (e) => {
             e.preventDefault();
             const a = document.getElementById("firstName").value;
             const b = document.getElementById("preference").value;
