--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    !--<script type="text/javascript" src="./index.js"></script>-->
+    <!--<script type="text/javascript" src="./index.js"></script>-->
 </head>
 <body>
     <form id="form1">
@@ -13,13 +13,12 @@
         <input type="submit" value="submit" id="sub" name="sub">
     </form>
     <script>
-        const form1 = document.getElementById("form1);
+        const form1 = document.getElementById("form1");
         form1.addEventListener('submit', (e) => {
             e.preventDefault();
             const a = document.getElementById("firstName").value;
             const b = document.getElementById("preference").value;
-            const c = document.getElementById("sub");
-            const d = document.getElementById("form1");
+          
             localStorage.setItem('name', a);
             localStorage.setItem('pref', b);
     </script>
